samples/_failures_safe/1761500568_a13277_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03895a88.c: In function ‘main’:
./samples/SAFE/__tmp_03895a88.c:179:5: error: expected expression at end of input
  179 |     for (size_t i = 0;
      |     ^~~
./samples/SAFE/__tmp_03895a88.c:179:5: error: expected declaration or statement at end of input
